updated add button and fixed delete button spacing

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 ::placeholder {
-    color: white;
+  color: rgba(255, 255, 255, 0.75);
     opacity: 1; /* Firefox */
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
@@ -43,6 +43,7 @@ body {
 
 .input-wrapper input {
   flex: 1; /* Use flex to make the input and button share the available width */
+  border-radius: 25px;
 }
 
 .todo-list {
@@ -63,20 +64,19 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
+  margin-bottom: .5rem;
 }
 
 input, select, textarea{
-    color: white;
+  color: rgba(255, 255, 255, 0.75);
 }
 
 input {
-  padding: 0.8em;
+  padding: 0.7em;
   border-radius: 25px 0 0 25px;
 }
 
 button {
-  padding: 0.8em;
   cursor: pointer;
   border-radius: 0 25px 25px 0;
 }
@@ -90,12 +90,17 @@ button {
 }
 
 .add-button {
-  color: rgba(255, 255, 255, 0.75);
-  border-left: none;
+  color: white;
+  border-radius: 25px;
+  margin-left: .5rem;
+  background: rgba(255, 255, 255, 0.23);
+  border: 0;
+  padding: 0 1rem;
 }
 
 .delete-button {
-  color: rgba(255, 255, 255, 0.75)
+  color: rgba(255, 255, 255, 0.75);
+  border-left: none;
 }
 
 ul {
@@ -108,7 +113,6 @@ li {
   width: 600px;
   padding: 0.8em;
   text-align: left;
-  margin-bottom: 0.5rem;
   background: rgba(255, 255, 255, 0.23);
   transition: all 0.3s ease-out;
   border-left: 5px solid white;
